@@ -1,3 +1,9 @@
+2013-11-12  Jeff Law  <law@redhat.com>
+
+	* gcc.dg/tree-ssa/isolate-1.c: Update expected output.
+	* gcc.dg/tree-ssa/isolate-5.c: Verify the load survives through
+	the SSA optimizers.
+
 2013-11-12  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR target/59054
